--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "axios": "^0.20.0",
     "moment": "^2.29.1",
     "next": "^9.5.5",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "request-promise": "^4.2.6"
   }
 }
